Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8236740 | 8u251 | Alexander Matveev | P2 | Closed | Fixed | b02 |
JDK-8241174 | jfx11.0.7 | Alexander Matveev | P2 | Resolved | Fixed |
Description
Remove CoreAudio Utility Classes v 2.0
Attachments
Issue Links
- backported by
-
JDK-8241174 Remove CoreAudio Utility Classes
- Resolved
-
JDK-8236740 Remove CoreAudio Utility Classes
- Closed
- clones
-
JDK-8230610 Upgrade GStreamer to version 1.16.1
- Resolved
- relates to
-
JDK-8240832 Remove unused applecoreaudio.md third-party legal file
- Resolved
-
JDK-8094274 [Media] Use of QuickTime prevents Mac AppStore Submission
- Resolved
-
JDK-8242530 [macos] Some audio files miss spectrum data when another audio file plays first
- Resolved
- links to
-
Commit openjdk/jfx/c9519b6e
(1 relates to, 1 links to)