8232589: Remove CoreAudio Utility Classes

Reviewed-by: kcr, jvos